# katana

./: LICENSE  README.md
svg-extractor/: Cargo.toml
svg-extractor/src/: main.rs
web/: Cargo.toml  README.md
web/public/: card.css  ka.json  kana.json
web/public/hiragana/: ka.json  ki.json  words.json
web/public/katakana/: ka.json  words.json
web/src/: card.rs  main.rs
