[package]
name = "katana"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
dioxus = { version = "0.5.1", features = ["web"] }
dioxus-web = "0.5.1"
log = "0.4.21"
manganis = "0.2.2"
reqwest = { version = "0.12.3", features = ["json"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26.2", features = ["derive", "strum_macros"] }
wasm-logger = "0.2.0"
